--- a/styles/pages/workshop.css
+++ b/styles/pages/workshop.css
@@ -62,7 +62,8 @@
 
     display: flex;
     align-items: start;
-    justify-content: space-between;
+    justify-content: start;
+    flex-direction: column;
 
     transition: all 0.15s ease;
 }
@@ -85,6 +86,19 @@
 
 .items-tag {
     background-color: #5f5341;
-    padding: 5px;
-    border-radius: 4px;
+    padding: 7px 13px;
+    border-radius: 10px;
+    margin-top: 15px;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 6px;
+
+    font-size: 13.5px;
+    font-weight: 500;
+}
+
+.items-tag-icon {
+    height: 18px;
 }
